<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/settings_general_header"
        app:allowDividerBelow="true"
        app:iconSpaceReserved="false">

        <EditTextPreference
            app:title="@string/signature_title"
            app:iconSpaceReserved="false"
            app:key="signature"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/settings_microservices_header">

        <ListPreference
            app:title="@string/settings_service_update_frequency"
            app:iconSpaceReserved="false"
            app:defaultValue="reply"
            app:entries="@array/update_frequency"
            app:entryValues="@array/update_frequency_values"
            app:key="reply"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="accounts"
            app:title="@string/settings_service_auth_title" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="accounts"
            app:title="@string/settings_service_accounts_title" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="resources"
            app:title="@string/settings_service_resources_title" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="tasks"
            app:title="@string/settings_service_tasks_title" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="messages"
            app:title="@string/title_activity_messages" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/services_header">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="sync"
            app:title="@string/sync_title" />


    </PreferenceCategory>

</PreferenceScreen>
