<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/ic_chart_bar"
            android:title="@string/menu_services" />
        <item
            android:id="@+id/nav_accounts"
            android:icon="@drawable/ic_menu_people"
            android:title="@string/menu_accounts" />
        <item
            android:id="@+id/nav_resources"
            android:icon="@drawable/ic_download_network"
            android:title="@string/menu_resources" />
        <item
            android:id="@+id/nav_workflow"
            android:icon="@drawable/ic_chart_timeline"
            android:title="@string/menu_workflows" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_email_multiple"
            android:title="@string/menu_messages" />
        <item
            android:id="@+id/nav_tasks"
            android:icon="@drawable/ic_icon_calendar_check"
            android:title="@string/menu_todos" />
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_note_multiple"
            android:title="@string/notes" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
