<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_accounts_credentials"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".views.fragments.accounts.credentials.AccountCredentialsFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/profile_picture_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/accounts_photo_change_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/details_profile_image"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:contentDescription="@string/accounts_profile_picture"
                        android:src="@drawable/ic_profile_placeholder" />

                    <ImageView
                        android:id="@+id/details_profile_image_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|end"
                        android:layout_marginBottom="10dp"
                        android:src="@drawable/ic_image_edit"
                        android:tint="@color/colorBlue" />

                </FrameLayout>

                <View style="@style/divider" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/profile_picture_linear_layout"
                android:orientation="vertical">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/accounts_email_icon"
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="0"
                        android:src="@drawable/ic_menu_mail"
                        android:tint="@color/colorGrey" />

                    <TextView
                        android:id="@+id/accounts_email_label_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Email"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/accounts_email_address_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:text="admin@zafritech.net"
                        android:textAlignment="textEnd"
                        android:textSize="18sp" />

                </LinearLayout>

                <View style="@style/divider" />

                <LinearLayout
                    android:id="@+id/accounts_password_change_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/accounts_password_icon"
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="0"
                        android:src="@drawable/ic_key_variant"
                        android:tint="@color/colorGrey" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Password"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Change Password"
                        android:textAlignment="textEnd"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/accounts_password_change_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="26dp"
                        android:layout_weight="0"
                        android:src="@drawable/ic_chevron_right"
                        android:tint="@color/colorBlue" />
                </LinearLayout>

                <View style="@style/divider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/accounts_admin_role_icon"
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="0"
                        android:src="@drawable/ic_account_tie"
                        android:tint="@color/colorGrey" />

                    <Switch
                        android:id="@+id/has_admin_role_switch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:switchTextAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:text="@string/has_admin_role"
                        android:textAppearance="@android:style/TextAppearance.Material"
                        android:textColor="@android:color/tertiary_text_light"
                        android:textSize="18sp" />

                </LinearLayout>

                <View style="@style/divider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/accounts_tech_role_icon"
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="0"
                        android:src="@drawable/ic_account_network"
                        android:tint="@color/colorGrey" />

                    <Switch
                        android:id="@+id/has_technical_role_switch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/has_technical_role"
                        android:textAppearance="@android:style/TextAppearance.Material"
                        android:textColor="@android:color/tertiary_text_light"
                        android:textSize="18sp" />

                </LinearLayout>

                <View style="@style/divider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/accounts_enabled_icon"
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="0"
                        android:src="@drawable/ic_account_check"
                        android:tint="@color/colorGrey" />

                    <Switch
                        android:id="@+id/account_enabled_switch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/is_enabled"
                        android:textAppearance="@android:style/TextAppearance.Material"
                        android:textColor="@android:color/tertiary_text_light"
                        android:textSize="18sp" />

                </LinearLayout>

                <View style="@style/divider" />

                <Button
                    android:id="@+id/button_save_credentials"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="4dp"
                    android:background="@color/colorGreenDark"
                    android:text="@string/button_save"
                    android:textColor="@color/colorWhite"/>

                <Button
                    android:id="@+id/button_edit_contacts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/colorBlueDark"
                    android:text="Edit Contacts"
                    android:textColor="@color/colorWhite" />

            </LinearLayout>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>